--- a/220122/건우.ipynb
+++ b/220122/건우.ipynb
@@ -12,9 +12,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://programmers.co.kr/learn/courses/30/lessons/86051\n",
     "\n",
-    "# 없는 숫자 더하기\n"
+    "# 없는 숫자 더하기\n",
+    "https://programmers.co.kr/learn/courses/30/lessons/86051\n"
    ]
   },
   {
@@ -31,9 +31,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://programmers.co.kr/learn/courses/30/lessons/12944\n",
     "\n",
-    "# 평균 구하기"
+    "# 평균 구하기\n",
+    "https://programmers.co.kr/learn/courses/30/lessons/12944\n"
    ]
   },
   {
